Whole Project: Fixed some basic warning errors, and logging errors.